# rustROI

./: .gitignore  Cargo.toml  build.rs  download_model.sh  model  regions.json
src/: audio_detector.rs  egui_gui.rs  gui.rs  jitsi_controller.rs  main.rs  roi_controller.rs
