[package]
name = "rustROI"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
iced = { version = "0.10", features = ["tokio"] }
mouse-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
vosk = "0.3"