[package]
name = "rustROI"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
cpal = "0.12.1"
iced = { version = "0.3", features = ["tokio"] }
mouse-rs = "0.4"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2", features = ["full"] }
vosk = "0.2"